# edupals-n4d-toolkit

./: CMakeLists.txt  EdupalsN4DConfig.cmake  README.md
debian/: changelog  control  copyright  libedupals-n4d-dev.dirs  libedupals-n4d-dev.install  libedupals-n4d.install
include/: n4d.hpp
src/: CMakeLists.txt  n4d.cpp  testing.cpp
